--- a/live_betting/templates/index.html
+++ b/live_betting/templates/index.html
@@ -4,22 +4,11 @@
     <meta charset='utf-8'>
 		<meta content='IE=edge' http-equiv='X-UA-Compatible'>
 		<meta content='width=device-width, initial-scale=1' name='viewport'>
-		<title>insta485</title>
-		<link href="{{url_for('static',filename='images/logo.png')}}" rel="icon" type="image/jpeg" />
+		<title>Live Betting</title>
 		<link href="{{url_for('static',filename='css/style.css')}}" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
-    <div class="header">
-      <a href="/">
-        <img src="{{url_for('static',filename='images/logo.png')}}" alt="logo1" class="logo camera" />
-        <img src="{{url_for('static',filename='images/insta485.png')}}" alt="logo2" class="logo" />
-      </a>
-      <div class="header-right">
-        <a href="/explore/" class="explore-right">explore</a>
-        <a href="/u/{{logname}}/">{{logname}}</a>
-      </div>
-    </div>
 
     <div id="reactEntry">
       Loading ...
